--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>
                 Veja passo a passo de como podemos ajudar o seu negócio
             </h2>
-            <!-- <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div> -->
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
         </section>
 
         <section class="why-use">
@@ -150,13 +150,16 @@
                         <p>Pedidos de reembolso</p> 
                     </div>
                 </div>
-
                 <button class="demo-button">Conhecer planos</button>
+                </div>
+
         </section>
 
         <section class="compay-home">
-            <img src="./img/compayz-logo.svg" alt="" class="logo">
-            <h2>Ferramenta de vendas e relacionamento com clientes completa para infoprodutores aumentarem conversões.</h2>
+            <div class="title">
+                <img src="./img/compayz-logo.svg" alt="" class="logo">
+               <h2>Ferramenta de vendas e relacionamento com clientes completa para infoprodutores aumentarem conversões.</h2>
+            </div>
             <div class="page-buttons">
                 <div class="page-button selected" id="page-button1">
                     <img src="./img/Camuflagem.png" alt="">
@@ -173,60 +176,65 @@
             </div>
             <div class="page-content">
                 <div class="page selected" id="page1">
-                    <div class="page-icon">
-                        <img src="./img/Camuflagem.png" alt="">
+                    <div class="page-container">
+                        <div class="page-icon">
+                            <img src="./img/Camuflagem.png" alt="">
+                        </div>
+                        <h2>Tráfego de acordo com suas regras</h2>
+                        <ul>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                <p>Camuflagem de domínios sem redirecionamento;</p>
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Bloqueio de bots e softwares espiões;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Rastreamento por pixel e tags;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Criptografia de página e texto;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Gerenciamento e Roteamento de links para lançamentos;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Configuração personalizada de botão de WhatsApp e Popups;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Páginas prontas e super rápidas;
+                            </li>
+                            <li>
+                                <img src="./img/check-svg.svg" alt="">
+                                Encurtador de links com rastreamento.
+                            </li>
+                        </ul>
                     </div>
-                    <h2>Tráfego de acordo com suas regras</h2>
-                    <ul>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            <p>Camuflagem de domínios sem redirecionamento;</p>
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Bloqueio de bots e softwares espiões;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Rastreamento por pixel e tags;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Criptografia de página e texto;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Gerenciamento e Roteamento de links para lançamentos;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Configuração personalizada de botão de WhatsApp e Popups;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Páginas prontas e super rápidas;
-                        </li>
-                        <li>
-                            <img src="./img/check-svg.svg" alt="">
-                            Encurtador de links com rastreamento.
-                        </li>
-                    </ul>
                     <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
+            </div>
 
                 <div class="page" id="page2">
-                    <div class="page-icon">
-                        <img src="./img/Funnel-Z.png" alt="">
+                    <div class="page-container">
+                        <div class="page-icon">
+                            <img src="./img/Funnel-Z.png" alt="">
+                        </div>
+                        <h2>Vendas</h2>
+                        <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
+                        Com o Convert Z integrado aos seus produtos sua equipe de recuperação atua no cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.
+                        Integramos com as maiores e MELHORES PLATAFORMA DE VENDAS do mercado e criamos funis de recuperação de vendas para você.</p>
                     </div>
-                    <h2>Vendas</h2>
-                    <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
-                    Com o Convert Z integrado aos seus produtos sua equipe de recuperação atua no cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.
-                    Integramos com as maiores e MELHORES PLATAFORMA DE VENDAS do mercado e criamos funis de recuperação de vendas para você.</p>
                     <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
 
                 <div class="page" id="page3">
-                    <div class="page-icon">
+                    <div class="page-container"><div class="page-icon">
                         <img src="./img/Icon-Member-Z-001.png" alt="">
                     </div>
                     <h2>Escala</h2>
@@ -256,7 +264,7 @@
                             <img src="./img/check-svg.svg" alt="">
                             <p>Suporte personalizado para ajudar produtor e sua equipe;</p>
                         </li>
-                    </ul>
+                    </ul></div>
                     <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
             </div>
