New photos and VSL

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
                 <div class="users-wrapper">
                     <div class="users-column active" id="column-1">
                         <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <img class="profile-img" src="./img/gabriel-floriani.png" alt="">
                             <h6 class="user-name">Gabriel Floriani</h6>
                             <h6 class="user-social">@gabrielflorianii</h6>
                         </div>
                     </div>
                     <div class="users-column" id="column-2">
                         <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <img class="profile-img" src="./img/thayni-ruana.png" alt="">
                             <h6 class="user-name">Thayni Ruana</h6>
                             <h6 class="user-social">@tiadoingle</h6>
                         </div>
                     </div>
                     <div class="users-column" id="column-3">
                         <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Sou Recoads</h6>
-                            <h6 class="user-social">@sourecoads</h6>
+                            <img class="profile-img" src="./img/cacique-ads.png" alt="">
+                            <h6 class="user-name">Cacique Ads</h6>
+                            <h6 class="user-social">@caciqueads</h6>
                         </div>
                     </div>
                     
@@ -60,7 +60,7 @@
             <h2>
                 Veja passo a passo de como podemos ajudar o seu negócio
             </h2>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fDPAckPdlWY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
 
         <section class="why-use">
@@ -216,7 +216,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img src="./img/page-img1.webp" alt="" class="page-img">
+                    <img src="./img/Mockup-Celular.png" alt="" class="page-img">
                 </div>
             </div>
 
