Adding new mockups

--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
                 <div class="page" id="page2">
                     <div class="page-container">
                         <div class="page-icon">
-                            <img src="./img/Funnel-Z.png" alt="">
+                            <img src="./img/compras-aprovadas-svg.svg" alt="">
                         </div>
                         <h2>Vendas</h2>
                         <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
                         Com o Convert Z integrado aos seus produtos sua equipe de recuperação atua no cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.
                         Integramos com as maiores e MELHORES PLATAFORMA DE VENDAS do mercado e criamos funis de recuperação de vendas para você.</p>
                     </div>
-                    <img src="./img/page-img1.webp" alt="" class="page-img">
+                    <img src="./img/Mockup-Celular.png" alt="" class="page-img">
                 </div>
 
                 <div class="page" id="page3">
@@ -265,7 +265,7 @@
                             <p>Suporte personalizado para ajudar produtor e sua equipe;</p>
                         </li>
                     </ul></div>
-                    <img src="./img/page-img1.webp" alt="" class="page-img">
+                    <img src="./img/Mockup-Celular.png" alt="" class="page-img">
                 </div>
             </div>
             <button class="demo-button">Conhecer planos</button>
